@@ -1,10 +1,10 @@
 {
-  "count": 27,
+  "count": 21,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 14,
+      "count": 8,
       "uniques": 1
     },
     {
