@@ -1,3 +1,10 @@
+2022-06-01T08:15:42Z:
+* notice: last 14d: unq all: 1 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 398
+* notice: next accum: outdated-unq outdated-all / unq all: 16 371 / 22 392
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -6 / +1 +14 -0 -6 / 1 8
+* notice: removed / changed dates: [] / [2022-05-18]
+
 2022-06-01T00:55:53Z:
 * notice: last 14d: unq all: 1 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 15 350 / 21 380
